--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "babel-runtime": "^6.18.0",
+    "bootstrap": "^3.3.7",
     "node-sass": "^3.11.2",
     "sass": "^0.5.0",
     "sass-loader": "^4.0.2",
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "vue-router": "^2.0.1",
+    "vuex": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
