--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "babel-runtime": "^6.18.0",
     "bootstrap": "^3.3.7",
     "node-sass": "^3.11.2",
