--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "babel-plugin-component": "^0.6.0",
     "babel-runtime": "^6.18.0",
     "bootstrap": "^3.3.7",
+    "element-ui": "^1.0.0",
     "node-sass": "^3.11.2",
     "sass": "^0.5.0",
     "sass-loader": "^4.0.2",
