--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "axios": "^0.15.2",
     "babel-plugin-component": "^0.6.0",
     "babel-runtime": "^6.18.0",
     "bootstrap": "^3.3.7",
@@ -22,6 +23,7 @@
     "sass": "^0.5.0",
     "sass-loader": "^4.0.2",
     "vue": "^2.0.1",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0"
   },
