--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-runtime": "^6.18.0",
     "bootstrap": "^3.3.7",
     "element-ui": "^1.0.0",
+    "jsonify": "^0.0.0",
+    "md5": "^2.2.1",
     "node-sass": "^3.11.2",
     "sass": "^0.5.0",
     "sass-loader": "^4.0.2",
